home page additions and footer

--- a/main.html
+++ b/main.html
@@ -22,25 +22,45 @@
 
 
 <div class="gettoknow"> 
+  <div class="info_task_bar">
+    <div class = "buttons">
+      <button class="exit"></button>
+      <button class="close"></button>
+      <button class="increase"></button>
+    </div>
+    
+
+
+  </div>
 <h1> Hello, i'm Noah </h1>
 </div>
 
 
+<div class="language_bar">
+  <div>
+    <button class="img-btn">
+    <img src="media/python-logo.png" >
+    </button>
 
+    <button class="img-btn">
+    <img src="media/arduino.png">
+    </button>
 
+    <button class="img-btn">
+    <img src="media/web_dev.png" >
+    </button>
 
+    <button class="img-btn">
+    <img src="media/xcode_logo.png" >
+    </button>
 
+  </div>
 
-
-
-
-
+</div>
 
 
 
 </body>
-
-
 
 
 
