update to info on home screen
Pop up method fixed
Need to add footer at bottom and project info

--- a/main.html
+++ b/main.html
@@ -28,12 +28,51 @@
     </div>
     <span class="window-title">About Me</span>
   </div>
-  <div class="window-content">
-    <h1>Hello, I'm Noah</h1>
-    <p>
-      This is my CV website inspired by classic Mac OS.
-      I enjoy programming, robotics, and creative tech projects.
-    </p>
+  <div class="window-content about-content">
+
+  <div class="about-header">
+    <img src="media/noah.jpg" alt="Photo of Noah" class="profile-pic">
+
+    <div class="about-text">
+      <h1>Hello, I’m Noah</h1>
+      <p class="subtitle">Computer Science & AI Undergraduate</p>
+    </div>
+  </div>
+
+  <div class="about-section">
+    <h3>Interests</h3>
+    <ul>
+      <li>Robotics & embedded systems</li>
+      <li>Artificial Intelligence & Machine Learning</li>
+      <li>Software projects combining hardware & code</li>
+    </ul>
+  </div>
+
+  <div class="about-section">
+    <h3>Education</h3>
+    <ul>
+      <li>Undergraduate in Computer Science & Artificial Intelligence</li>
+    </ul>
+  </div>
+
+  <div class="about-section">
+    <h3>Tennis</h3>
+    <ul>
+      <li>Founder & Chair of my university's first Tennis Club</li>
+      <li>Responsible for organisation, leadership, and growth</li>
+    </ul>
+  </div>
+
+  <div class="about-section">
+    <h3>Hobbies</h3>
+    <ul>
+      <li>Running</li>
+      <li>Playing tennis</li>
+      <li>Personal robotics & programming projects</li>
+    </ul>
+  </div>
+
+</div>
   </div>
 </div>
 
@@ -68,7 +107,42 @@
     <span class="window-title">Robotics</span>
   </div>
   <div class="window-content">
-    <p>Robots, sensors, hardware builds, and automation.</p>
+    <div class="window-content">
+  <p>
+    I enjoy building and programming robotics systems that combine
+    electronics, mechanics, and real-time software control.
+    My projects focus on using Arduino, sensors, and servos to solve
+    physical control problems and experiment with movement and stability.
+  </p>
+
+  <p><strong>Selected Robotics Projects:</strong></p>
+
+  <ul class="project-list">
+    <li>
+      <span class="project-link" onclick="openProject('gyro')">
+        Missile Gyro Stabilisation System
+      </span>
+    </li>
+
+    <li>
+      <span class="project-link" onclick="openProject('arm')">
+        Programmable Robotic Arm (TinkerKit)
+      </span>
+    </li>
+
+    <li>
+      <span class="project-link" onclick="openProject('servo')">
+        Arduino Micro-Servo Control Experiments
+      </span>
+    </li>
+
+    <li>
+      <span class="project-link" onclick="openProject('misc')">
+        Additional Sensor & Motion Projects
+      </span>
+    </li>
+  </ul>
+</div>
   </div>
 </div>
 
