link github dock icon to web page

--- a/main.html
+++ b/main.html
@@ -191,15 +191,20 @@
     <button class="img-btn" onclick="openWindow('python', this)">
     <img src="media/python-logo.png" alt="Python">
     </button>
-    <button class="img-btn">
+    <button class="img-btn" onclick="openWindow('python', this)">
       <img src="media/arduino.png" alt="Arduino">
     </button>
-    <button class="img-btn">
+    <button class="img-btn" onclick="openWindow('python', this)">
       <img src="media/web_dev.png" alt="Web Dev">
     </button>
-    <button class="img-btn">
+    <button class="img-btn" onclick="openWindow('python', this)">
       <img src="media/xcode_logo.png" alt="Xcode">
     </button>
+    <a href="https://github.com/NoahB6JS"> 
+    <button class="img-btn" href="https://github.com/NoahB6JS">
+      <img src="media/github.png" alt="GitHub">
+    </button>
+    </a>
   </div>
 </div>
 
