updated links to web

--- a/main.html
+++ b/main.html
@@ -178,9 +178,37 @@
 
   <div class="window-content">
     <ul>
+      <a href="https://github.com/NoahB6JS/Facial_recognition">
       <li>Facial recognition - Mac camera</li>
+      </a>
+      <a href="https://github.com/NoahB6JS/QR_code_generator">
       <li>QR code generator</li>
+      </a>
+      <a href="https://github.com/NoahB6JS/COM4008-Space_Invaders">
       <li>Space Invaders</li>
+      </a>
+      
+    </ul>
+  </div>
+</div>
+
+<div class="window_python" id="arduino">
+  <div class="window-header">
+    <div class="window-buttons">
+      <span class="exit" onclick="closeWindow('python')"></span>
+      <span class="close"></span>
+      <span class="increase"></span>
+    </div>
+    <span class="window-title">Arduino Projects</span>
+  </div>
+
+  <div class="window-content">
+    <ul>
+      <a href="https://github.com/NoahB6JS/Ardiuno_robotic_arm">
+      <li>Robotic arm</li>
+      </a>
+      <li>Missile Gyro Stabilisation System</li>
+      <li>Automatic plant watering system</li>
       
     </ul>
   </div>
@@ -191,7 +219,7 @@
     <button class="img-btn" onclick="openWindow('python', this)">
     <img src="media/python-logo.png" alt="Python">
     </button>
-    <button class="img-btn" onclick="openWindow('python', this)">
+    <button class="img-btn" onclick="openWindow('arduino', this)">
       <img src="media/arduino.png" alt="Arduino">
     </button>
     <button class="img-btn" onclick="openWindow('python', this)">
